--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center; /* 画面の中央にUIを揃える */
+            justify-content: center;
             min-height: 100vh;
             margin: 0;
             padding: 20px;
             transition: background-color 0.3s, color 0.3s;
         }
 
-        /* ダークモードスタイル */
         .dark-mode {
             background-color: #222;
             color: #ddd;
@@ -36,7 +35,7 @@
 
         #counters {
             display: grid;
-            grid-template-columns: repeat(5, 1fr); /* デフォルトで5つのカウンターを横並び */
+            grid-template-columns: repeat(5, 1fr);
             grid-gap: 20px;
             padding: 20px;
             width: 100%;
@@ -44,14 +43,19 @@
         }
 
         .counter-container {
-            background: #333; /* ダークモード用の色 */
-            color: #fff; /* テキストカラーを変更 */
+            background: #fff;
+            color: #333;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 15px;
             text-align: center;
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
             max-width: 180px;
+        }
+
+        .dark-mode .counter-container {
+            background: #333;
+            color: #fff;
         }
 
         .counter-container:hover {
@@ -73,7 +77,7 @@
 
         .remaining {
             font-size: 0.9em;
-            color: #aaa; /* 残り表示用の色 */
+            color: #aaa;
         }
 
         .amount {
@@ -120,8 +124,8 @@
 
         .totals-container {
             margin-top: 20px;
-            background-color: #333; /* ダークモード用の色 */
-            color: #fff; /* テキストカラーを変更 */
+            background-color: #fff;
+            color: #333;
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -129,6 +133,11 @@
             width: 100%;
             max-width: 900px;
             transition: background-color 0.3s, color 0.3s;
+        }
+
+        .dark-mode .totals-container {
+            background: #333;
+            color: #fff;
         }
 
         .total-title {
@@ -181,7 +190,7 @@
         /* 縦画面用のスタイル調整 */
         @media (max-width: 768px) {
             #counters {
-                grid-template-columns: repeat(2, 1fr); /* 2列で表示 */
+                grid-template-columns: repeat(2, 1fr);
             }
         }
     </style>
@@ -449,9 +458,16 @@
             }
 
             // ダークモードを自動切替
-            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-                document.body.classList.add('dark-mode');
+            const mediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
+            function applyTheme(e) {
+                if (e.matches) {
+                    document.body.classList.add('dark-mode');
+                } else {
+                    document.body.classList.remove('dark-mode');
+                }
             }
+            mediaQuery.addEventListener('change', applyTheme);
+            applyTheme(mediaQuery);
 
             // Attach changeCount and confirmDayChange functions to window for button onclick access
             window.changeCount = changeCount;
