--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         .remaining {
             font-size: 0.9em;
-            color: #aaa;
+            color: #888; /* 少し暗く調整 */
         }
 
         .amount {
@@ -187,7 +187,7 @@
             justify-content: center;
         }
 
-        /* 縦画面用のスタイル調整 */
+        /* スマートフォンの縦画面用スタイル調整 */
         @media (max-width: 768px) {
             #counters {
                 grid-template-columns: repeat(2, 1fr);
