--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         .remaining {
             font-size: 0.9em;
-            color: #888; /* 少し暗く調整 */
+            color: inherit; /* 他のテキストと同じ色に */
         }
 
         .amount {
@@ -187,10 +187,14 @@
             justify-content: center;
         }
 
-        /* スマートフォンの縦画面用スタイル調整 */
+        /* 縦画面用のスタイル調整 */
         @media (max-width: 768px) {
             #counters {
                 grid-template-columns: repeat(2, 1fr);
+            }
+
+            .counter-container {
+                max-width: 100%;
             }
         }
     </style>
