--- a/index.html
+++ b/index.html
@@ -196,6 +196,16 @@
             .counter-container {
                 max-width: 100%;
             }
+
+            .charts-section {
+                flex-direction: column; /* 縦画面では円グラフを縦に並べる */
+                align-items: center;
+            }
+
+            .chart-container {
+                max-width: 100%; /* 横幅をデバイス幅に合わせる */
+                margin-bottom: 20px;
+            }
         }
     </style>
     <!-- Firebase App (the core Firebase SDK) -->
