--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         #counters {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
-            grid-gap: 15px; /* 横の間隔を小さくする */
+            grid-gap: 20px;
             padding: 20px;
             width: 100%;
             justify-items: center;
@@ -47,10 +47,10 @@
             color: #333;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px; /* カウンターのサイズを少し大きくする */
+            padding: 20px; /* カウンターサイズを大きくする */
             text-align: center;
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
-            max-width: 200px; /* カウンターの最大幅を増やす */
+            max-width: 200px; /* カウンターサイズを大きくする */
         }
 
         .dark-mode .counter-container {
@@ -131,7 +131,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
             width: 100%;
-            max-width: 600px; /* 合計値表示領域の幅を小さくする */
+            max-width: 900px;
             transition: background-color 0.3s, color 0.3s;
         }
 
@@ -191,25 +191,25 @@
         @media (max-width: 768px) {
             #counters {
                 grid-template-columns: repeat(2, 1fr);
-                grid-gap: 20px; /* 横の間隔を縦と同じにする */
+                grid-gap: 20px; /* 水平方向の間隔を調整 */
             }
 
             .counter-container {
                 max-width: 100%;
             }
 
-            .totals-container {
-                max-width: 100%; /* 縦画面では幅をデバイス幅に合わせる */
-            }
-
             .charts-section {
-                flex-direction: column; /* 縦画面では円グラフを縦に並べる */
+                flex-direction: column;
                 align-items: center;
             }
 
             .chart-container {
-                max-width: 100%; /* 横幅をデバイス幅に合わせる */
+                max-width: 100%;
                 margin-bottom: 20px;
+            }
+
+            .totals-container {
+                max-width: 95%; /* 合計値表示エリアを少し狭くする */
             }
         }
     </style>
